# typie-tty

./: Cargo.toml  README.md
src/: main.rs
