[package]
name = "typie-tty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
public-ip = "0.2.1"
rand = "0.8.4"
terminal_size = "0.1.17"
termion = "1.5.6"
tokio = { version = "1.12.0", features = ["full"] }
